# AlicIA

./: README.md  package.json  plans.md
backend/: Cargo.toml
backend/docs/: clean-ddd-baseline-backend.md
backend/src/: account_runtime.rs  app_server_runtime.rs  codex_event_translator.rs  codex_native_runtime.rs  command_runtime.rs  config_runtime.rs  events_runtime.rs  launch_runtime.rs  main.rs  mcp_runtime.rs  models_runtime.rs  neuro_runtime.rs  session_lifecycle_runtime.rs  session_runtime.rs  session_turn_runtime.rs  terminal_runtime.rs  workspace_runtime.rs
backend/src/application/: mod.rs
backend/src/application/account_mcp/: use_cases.rs
backend/src/application/neuro_adt/: contracts.rs  mod.rs  ports.rs  use_cases.rs
backend/src/application/session_thread_review/: use_cases.rs
backend/src/application/session_turn/: use_cases.rs
backend/src/application/workspace/: mod.rs  use_cases.rs
backend/src/domain/: mod.rs
backend/src/domain/account_mcp/: validation.rs
backend/src/domain/neuro_adt/: error.rs  mod.rs  server_store.rs  types.rs
backend/src/domain/session_thread_review/: interaction_policy.rs  mod.rs  review_policy.rs  schedule_policy.rs  thread_query.rs
backend/src/domain/session_turn/: mod.rs  send_codex_input_plan.rs  slash_command_policy.rs
backend/src/domain/workspace/: mod.rs  path_policy.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/filesystem/: mod.rs  neuro_server_store.rs  workspace_fs.rs
backend/src/infrastructure/runtime_bridge/: app_server.rs  mcp_native.rs  mod.rs  session_pending_action_runtime_access.rs  session_send_input_effects.rs  session_thread_catalog.rs  session_thread_housekeeping.rs  session_thread_runtime_access.rs  session_thread_shared.rs  session_thread_shutdown_runtime_access.rs  session_turn_event_pipeline.rs  status_snapshot.rs
backend/src/status_runtime/: fetch.rs  format.rs  rate_limit_snapshot.rs
(+97 files in other folders)
