[package]
name = "alicia-egui-tauri-backend"
version = "0.1.0"
edition = "2021"
description = "Tauri backend bridge for AlicIA codex CLI integration"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
codex-core = { path = "../../codex/codex-rs/core", optional = true }
codex-protocol = { path = "../../codex/codex-rs/protocol", optional = true }
codex-app-server-protocol = { path = "../../codex/codex-rs/app-server-protocol", optional = true }
codex-rmcp-client = { path = "../../codex/codex-rs/rmcp-client", optional = true }
neuro-engine = { path = "../../codex/codex-rs/neuro-engine" }
neuro-mcp = { path = "../../codex/codex-rs/neuro-mcp" }
neuro-types = { path = "../../codex/codex-rs/neuro-types" }
neuro-adt-core = { path = "../../codex/codex-rs/neuro-adt-core" }
neuro-adt-ws = { path = "../../codex/codex-rs/neuro-adt-ws" }
portable-pty = "0.8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync", "time"] }
toml = "0.9"

[features]
default = ["custom-protocol", "native-codex-runtime"]
custom-protocol = ["tauri/custom-protocol"]
native-codex-runtime = ["dep:codex-core", "dep:codex-protocol", "dep:codex-app-server-protocol", "dep:codex-rmcp-client"]

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
